--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a jobs board application written in Rails and based on Mackenzie Child's excellent Rails tutorial series: https://mackenziechild.me/12-in-12/7/
 
-Things you may want to cover:
+This app's features include:
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+– Posts (Jobs)
+– Categories
+– Filtering
+– HAML
+– Bootstrap
